# llvm-pru

./: .gitignore  CMakeLists.txt  README.md  TODO.md  fast.cmake
PRU/: CMakeLists.txt  LLVMBuild.txt  PRUAsmPrinter.cpp
PRU/abi/: cc.h  ti.h
PRU/asmprinter/: CMakeLists.txt  LLVMBuild.txt  instprinter.cpp
PRU/codegen/: framelowering.cpp  instrinfo.cpp  isel.cpp  memopcombiner.cpp  registerinfo.cpp  subtarget.cpp  targetlowering.cpp  targetmachine.cpp
PRU/desc/: CMakeLists.txt  LLVMBuild.txt  PRUMCTargetDesc.cpp
PRU/include/: framelowering.h  instprinter.h  instrinfo.h  registerinfo.h  subtarget.h  targetdesc.h  targetlowering.h  targetmachine.h
PRU/info/: CMakeLists.txt  LLVMBuild.txt  PRUInfo.cpp
PRU/tablegen/: callingconv.td  miscinstrs.td  miscpatterns.td  optypes.td  pru.td  registers.td
patches/: clang_release_38.patch  llvm_release_38.patch
scripts/: Decls.hs  MachNode.hs  SDNode.hs  TH.hs  aliasing_demo.hs  alloc.hs  allpossiblestructs.hs  gen2.hs  gen_mvix.hs  tablegen.hs
tablegen/: Decls.hs  MachNode.hs  Main.hs  Patterns.hs  SDNode.hs
test/: batched_memops.c  batched_spills.c  conditionals.c  extract.c  formatted_immediates.c  function_call.c  immediate_operand.c  lit.cfg.in  misc.c  packed_args.c  subreg_add.c  void_retty.c  zext.c
